--- a/templates/includes/scripts.html
+++ b/templates/includes/scripts.html
@@ -2,3 +2,4 @@
 
 <script src="{% static 'js/bootstrap.js' %}"></script>
 <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
+<script src="{% static 'js/scripts.js' %}"></script>
