--- a/templates/pages/form-edit-employee.html
+++ b/templates/pages/form-edit-employee.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="row">
     <div class="col-md-4 offset-md-4">
-        <h4 style="text-align: center">Editar Bus</h4>
+        <h4 style="text-align: center">Editar Empleado</h4>
         <div class="card py-2">
             <div class="card-body">
                 <form action="/employees/edit/{{ employee.id }}" method="post">
